[package]
name = "imgui-sdl2-support"
version = "0.13.0"
edition = "2021"
authors = ["The imgui-rs Developers"]
description = "sdl2 support code for the imgui crate"
homepage = "https://github.com/imgui-rs/imgui-sdl2-support"
repository = "https://github.com/imgui-rs/imgui-sdl2-support"
documentation = "https://docs.rs/imgui-sdl2-support"
license = "MIT OR Apache-2.0"
categories = ["gui"]

[dependencies]
imgui = { git = "https://github.com/imgui-rs/imgui-rs" }
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2.git", rev = "e4fbf931856bcbee5b0df7eab44f3f4d273f2e8d", features = [
  "static-link",
  "bundled",
  "use-bindgen",
] }

[dev-dependencies]
imgui-glow-renderer = { version = "0.13.0", git = "https://github.com/imgui-rs/imgui-glow-renderer" }
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2.git", rev = "e4fbf931856bcbee5b0df7eab44f3f4d273f2e8d", features = [
  "static-link",
  "bundled",
  "use-bindgen",
] }
